enum ProductSize {
  xs('XS'),
  s('S'),
  m('M'),
  l('L'),
  xl('XL');

  final String label;
  const ProductSize(this.label);
}

class Product {
...
